@@ -1,5 +1,5 @@
 /* crypto/x509/x509_vfy.h */
-/* Copyright (C) 1995-1997 Eric Young (eay@cryptsoft.com)
+/* Copyright (C) 1995-1998 Eric Young (eay@cryptsoft.com)
  * All rights reserved.
  *
  * This package is an SSL implementation written
@@ -62,6 +62,9 @@
 #ifdef  __cplusplus
 extern "C" {
 #endif
+
+#include "bio.h"
+#include "crypto.h"
 
 /* Outer object */
 typedef struct x509_hash_dir_st
@@ -149,12 +152,12 @@ typedef struct x509_store_st
 	int (*verify)();	/* called to verify a certificate */
 	int (*verify_cb)();	/* error callback */
 
-	char *app_data;
+	CRYPTO_EX_DATA ex_data;
 	int references;
-	int depth;		/* how deep to look */
+	int depth;		/* how deep to look (still unused) */
 	}  X509_STORE;
 
-#define X509_STORE_set_depth(ctx,depth)	((ctx)->depth=(depth))
+#define X509_STORE_set_depth(ctx,d)       ((ctx)->depth=(d))
 
 #define X509_STORE_set_verify_cb_func(ctx,func) ((ctx)->verify_cb=(func))
 #define X509_STORE_set_verify_func(ctx,func)	((ctx)->verify=(func))
@@ -193,19 +196,13 @@ typedef struct x509_store_state_st
 	int error;
 	X509 *current_cert;
 
-	char *app_data;
+	CRYPTO_EX_DATA ex_data;
 	} X509_STORE_CTX;
 
-#define X509_STORE_CTX_set_app_data(ctx,data)	((ctx)->app_data=(data))
-#define X509_STORE_CTX_get_app_data(ctx)	((ctx)->app_data)
-#define X509_STORE_CTX_get_error(ctx)		((ctx)->error)
-#define X509_STORE_CTX_set_error(ctx,s)		((ctx)->error=(s))
-#define X509_STORE_CTX_get_error_depth(ctx)	((ctx)->error_depth)
-#define X509_STORE_CTX_get_current_cert(ctx)	((ctx)->current_cert)
-#define X509_STORE_CTX_get_chain(ctx)		((ctx)->chain)
-
-#define X509_STORE_CTX_set_cert(c,ch)	((c)->cert=(ch))
-#define X509_STORE_CTX_set_chain(c,ch)	((c)->untrusted=(ch))
+#define X509_STORE_CTX_set_app_data(ctx,data) \
+	X509_STORE_CTX_set_ex_data(ctx,0,data)
+#define X509_STORE_CTX_get_app_data(ctx) \
+	X509_STORE_CTX_get_ex_data(ctx,0)
 
 #define X509_L_FILE_LOAD	1
 #define X509_L_ADD_DIR		2
@@ -233,18 +230,22 @@ X509_LOOKUP_METHOD *X509_LOOKUP_dir();
 #define		X509_V_ERR_CRL_HAS_EXPIRED			12
 #define		X509_V_ERR_ERROR_IN_CERT_NOT_BEFORE_FIELD	13
 #define		X509_V_ERR_ERROR_IN_CERT_NOT_AFTER_FIELD	14
-#define		X509_V_ERR_ERROR_IN_CRL_LAST_UPDATE_FILED	15
-#define		X509_V_ERR_ERROR_IN_CRL_NEXT_UPDATE_FILED	16
+#define		X509_V_ERR_ERROR_IN_CRL_LAST_UPDATE_FIELD	15
+#define		X509_V_ERR_ERROR_IN_CRL_NEXT_UPDATE_FIELD	16
 #define		X509_V_ERR_OUT_OF_MEM				17
 #define		X509_V_ERR_DEPTH_ZERO_SELF_SIGNED_CERT		18
 #define		X509_V_ERR_SELF_SIGNED_CERT_IN_CHAIN		19
 #define		X509_V_ERR_UNABLE_TO_GET_ISSUER_CERT_LOCALLY	20
 #define		X509_V_ERR_UNABLE_TO_VERIFY_LEAF_SIGNATURE	21
 #define		X509_V_ERR_CERT_CHAIN_TOO_LONG			22
+#define		X509_V_ERR_CERT_REVOKED				23
+
+/* The application is not happy */
+#define		X509_V_ERR_APPLICATION_VERIFICATION		50
 
 #ifndef NOPROTO
 #ifdef HEADER_LHASH_H
-X509_OBJECT *X509_OBJECT_retrive_by_subject(LHASH *h,int type,X509_NAME *name);
+X509_OBJECT *X509_OBJECT_retrieve_by_subject(LHASH *h,int type,X509_NAME *name);
 #endif
 void X509_OBJECT_up_ref_count(X509_OBJECT *a);
 void X509_OBJECT_free_contents(X509_OBJECT *a);
@@ -261,12 +262,17 @@ X509_LOOKUP_METHOD *X509_LOOKUP_hash_dir(void);
 X509_LOOKUP_METHOD *X509_LOOKUP_file(void);
 
 int X509_STORE_add_cert(X509_STORE *ctx, X509 *x);
+int X509_STORE_add_crl(X509_STORE *ctx, X509_CRL *x);
 
 int X509_STORE_get_by_subject(X509_STORE_CTX *vs,int type,X509_NAME *name,
 	X509_OBJECT *ret);
 
 int X509_LOOKUP_ctrl(X509_LOOKUP *ctx,int cmd,char *argc,long argl,char **ret);
+
+#ifndef NO_STDIO
 int X509_load_cert_file(X509_LOOKUP *ctx, char *file, int type);
+int X509_load_crl_file(X509_LOOKUP *ctx, char *file, int type);
+#endif
 
 void X509v3_cleanup_extensions(void );
 int X509v3_add_extension(X509_EXTENSION_METHOD *x);
@@ -286,14 +292,28 @@ int X509_LOOKUP_by_alias(X509_LOOKUP *ctx, int type, char *str,
 	int len, X509_OBJECT *ret);
 int X509_LOOKUP_shutdown(X509_LOOKUP *ctx);
 
+#ifndef NO_STDIO
 int	X509_STORE_load_locations (X509_STORE *ctx,
 		char *file, char *dir);
 int	X509_STORE_set_default_paths(X509_STORE *ctx);
+#endif
+
+int X509_STORE_CTX_get_ex_new_index(long argl, char *argp, int (*new_func)(),
+	int (*dup_func)(), void (*free_func)());
+int	X509_STORE_CTX_set_ex_data(X509_STORE_CTX *ctx,int idx,char *data);
+char *	X509_STORE_CTX_get_ex_data(X509_STORE_CTX *ctx,int idx);
+int	X509_STORE_CTX_get_error(X509_STORE_CTX *ctx);
+void	X509_STORE_CTX_set_error(X509_STORE_CTX *ctx,int s);
+int	X509_STORE_CTX_get_error_depth(X509_STORE_CTX *ctx);
+X509 *	X509_STORE_CTX_get_current_cert(X509_STORE_CTX *ctx);
+STACK *	X509_STORE_CTX_get_chain(X509_STORE_CTX *ctx);
+void	X509_STORE_CTX_set_cert(X509_STORE_CTX *c,X509 *x);
+void	X509_STORE_CTX_set_chain(X509_STORE_CTX *c,STACK /* X509 */ *sk);
 
 #else
 
 #ifdef HEADER_LHASH_H
-X509_OBJECT *X509_OBJECT_retrive_by_subject();
+X509_OBJECT *X509_OBJECT_retrieve_by_subject();
 #endif
 void X509_OBJECT_up_ref_count();
 void X509_OBJECT_free_contents();
@@ -309,11 +329,16 @@ X509_LOOKUP_METHOD *X509_LOOKUP_hash_dir();
 X509_LOOKUP_METHOD *X509_LOOKUP_file();
 
 int X509_STORE_add_cert();
+int X509_STORE_add_crl();
 
 int X509_STORE_get_by_subject();
 
 int X509_LOOKUP_ctrl();
+
+#ifndef NO_STDIO
 int X509_load_cert_file();
+int X509_load_crl_file();
+#endif
 
 void X509v3_cleanup_extensions();
 int X509v3_add_extension();
@@ -329,8 +354,21 @@ int X509_LOOKUP_by_fingerprint();
 int X509_LOOKUP_by_alias();
 int X509_LOOKUP_shutdown();
 
+#ifndef NO_STDIO
 int	X509_STORE_load_locations ();
 int	X509_STORE_set_default_paths();
+#endif
+
+int X509_STORE_CTX_get_ex_new_index();
+int	X509_STORE_CTX_set_ex_data();
+char *	X509_STORE_CTX_get_ex_data();
+int	X509_STORE_CTX_get_error();
+void	X509_STORE_CTX_set_error();
+int	X509_STORE_CTX_get_error_depth();
+X509 *	X509_STORE_CTX_get_current_cert();
+STACK *	X509_STORE_CTX_get_chain();
+void	X509_STORE_CTX_set_cert();
+void	X509_STORE_CTX_set_chain();
 
 #endif
 
